@@ -166,7 +166,11 @@ namespace Bam.Core
             TokenizedString.ParseAll();
             parseStringsProfile.StopProfile();
 
-            graph.Dump();
+            if (CommandLineProcessor.Evaluate(new ViewDependencyGraph()))
+            {
+                // must come after all strings are parsed, in order to display useful paths
+                graph.Dump();
+            }
 
             // Phase 4: Execute dependency graph
             // N.B. all paths (including those with macros) have been delayed expansion until now
